# AOC2023

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  notes  start_day.py
src/: main.rs
src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  greg.py  mod.rs
src/solutions/templates/: linear_template.rs  mod.rs  simultaneous_template.rs
src/utils/: grid.rs  load_input.rs  maths.rs  mod.rs  point.rs  solver_types.rs
templates/: mod_template.template  solution_template.template
