[package]
name = "aoc-rust-template"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.27", features = ["derive"] }
itertools = "0.10.5"
lazy_static = "1.4.0"
regex = "1.7.0"

[dev-dependencies]
rstest = "0.15.0"
[profile.release]
debug = 1